--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "precommit": "npm run lint",
     "dev": "nuxt-ts",
-    "prod": "cross-env NODE_ENV=\"production\" nuxt",
+    "prod": "cross-env NODE_ENV=\"production\" nuxt-ts",
     "build": "nuxt-ts build",
     "build:prod": "cross-env NODE_ENV=\"production\" nuxt-ts build",
     "start": "nuxt-ts start",
     "generate": "nuxt-ts generate",
-    "start:prod": "cross-env NODE_ENV=\"production\" nuxt-ts start"
+    "start:prod": "cross-env NODE_ENV=\"production\" nuxt-ts start",
+    "heroku-postbuild": "npm run build"
   },
   "dependencies": {
     "@nuxt/typescript": "^2.8.1",
@@ -31,6 +32,7 @@
     "markdown-it-table-of-contents": "^0.4.4",
     "nuxt": "^2.0.0",
     "prismjs": "^1.17.1",
+    "redirect-ssl": "^1.4.1",
     "sass": "^1.22.12",
     "sass-loader": "^7.3.1",
     "ts-node": "^8.3.0",
