--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@nuxt/typescript": "^2.8.1",
     "@nuxt/typescript-runtime": "^0.3.9",
     "@nuxtjs/axios": "^5.9.5",
+    "@nuxtjs/google-analytics": "^2.2.3",
     "@nuxtjs/markdownit": "^1.2.7",
     "@nuxtjs/vuetify": "^1.11.0",
     "@typescript-eslint/eslint-plugin": "^2.20.0",
