--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "dependencies": {
     "@nuxt/typescript": "^2.8.1",
-    "@nuxt/typescript-runtime": "^0.3.9",
+    "@nuxt/typescript-runtime": "^0.3.10",
     "@nuxtjs/axios": "^5.9.5",
     "@nuxtjs/google-analytics": "^2.2.3",
     "@nuxtjs/markdownit": "^1.2.7",
@@ -27,11 +27,13 @@
     "@typescript-eslint/parser": "^2.20.0",
     "cross-env": "^7.0.0",
     "fibers": "^4.0.2",
+    "fs": "0.0.1-security",
     "markdown-it-anchor": "^5.2.5",
     "markdown-it-highlightjs": "^3.0.0",
+    "markdown-it-imsize": "^2.0.1",
     "markdown-it-meta": "0.0.1",
     "markdown-it-table-of-contents": "^0.4.4",
-    "nuxt": "^2.11.0",
+    "nuxt": "^2.12.1",
     "prismjs": "^1.19.0",
     "redirect-ssl": "^1.4.1",
     "sass": "^1.25.0",
@@ -40,7 +42,7 @@
     "vuetify-loader": "^1.4.3"
   },
   "devDependencies": {
-    "@nuxt/typescript-build": "^0.5.7",
+    "@nuxt/typescript-build": "^0.5.8",
     "@nuxtjs/eslint-config": "^2.0.2",
     "@nuxtjs/eslint-module": "^1.1.0",
     "@vue/cli-plugin-eslint": "^4.2.3",
