--- a/package.json
+++ b/package.json
@@ -18,48 +18,49 @@
   },
   "dependencies": {
     "@nuxt/typescript": "^2.8.1",
-    "@nuxt/typescript-runtime": "^0.3.10",
-    "@nuxtjs/axios": "^5.9.5",
-    "@nuxtjs/google-analytics": "^2.2.3",
+    "@nuxt/types": "^2.14.12",
+    "@nuxt/typescript-runtime": "^2.0.0",
+    "@nuxtjs/axios": "^5.12.4",
+    "@nuxtjs/google-analytics": "^2.4.0",
     "@nuxtjs/markdownit": "^1.2.10",
-    "@nuxtjs/vuetify": "^1.11.0",
-    "@typescript-eslint/eslint-plugin": "^2.20.0",
-    "@typescript-eslint/parser": "^2.20.0",
-    "cross-env": "^7.0.0",
-    "fibers": "^4.0.2",
+    "@nuxtjs/vuetify": "^1.11.2",
+    "@typescript-eslint/eslint-plugin": "^2.34.0",
+    "@typescript-eslint/parser": "^2.34.0",
+    "cross-env": "^7.0.3",
+    "fibers": "^4.0.3",
     "fs": "0.0.1-security",
-    "markdown-it-anchor": "^5.2.5",
-    "markdown-it-highlightjs": "^3.0.0",
+    "markdown-it-anchor": "^5.3.0",
+    "markdown-it-highlightjs": "^3.4.0",
     "markdown-it-imsize": "^2.0.1",
     "markdown-it-meta": "0.0.1",
     "markdown-it-table-of-contents": "^0.4.4",
-    "nuxt": "^2.12.1",
-    "prismjs": "^1.21.0",
+    "nuxt": "^2.14.12",
+    "prismjs": "^1.22.0",
     "redirect-ssl": "^1.4.1",
-    "sass": "^1.25.0",
+    "sass": "^1.30.0",
     "sass-loader": "^8.0.2",
-    "ts-node": "^8.6.2",
-    "vuetify-loader": "^1.4.3"
+    "ts-node": "^8.10.2",
+    "vuetify-loader": "^1.6.0"
   },
   "devDependencies": {
-    "@nuxt/typescript-build": "^0.5.8",
+    "@nuxt/typescript-build": "^2.0.3",
     "@nuxtjs/eslint-config": "^2.0.2",
-    "@nuxtjs/eslint-module": "^1.1.0",
-    "@vue/cli-plugin-eslint": "^4.2.3",
-    "@vue/cli-service": "^4.2.3",
+    "@nuxtjs/eslint-module": "^1.2.0",
+    "@vue/cli-plugin-eslint": "^4.5.9",
+    "@vue/cli-service": "^4.5.9",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.8.0",
     "eslint-config-standard": "^14.1.0",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-jest": "^23.8.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^23.20.0",
     "eslint-plugin-node": ">=11.0.0",
-    "eslint-plugin-nuxt": ">=0.5.1",
+    "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": ">=4.0.1",
+    "eslint-plugin-standard": "^5.0.0",
     "eslint-plugin-vue": "^6.2.1",
     "material-design-icons-iconfont": "^5.0.1",
-    "nodemon": "^2.0.2",
-    "stylus": "^0.54.7",
+    "nodemon": "^2.0.6",
+    "stylus": "^0.54.8",
     "stylus-loader": "^3.0.2",
     "ts-loader": "^6.2.1"
   }
