--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "markdown-it-anchor": "^5.3.0",
     "markdown-it-highlightjs": "^3.4.0",
     "markdown-it-imsize": "^2.0.1",
+    "markdown-it-link-attributes": "^4.0.0",
     "markdown-it-meta": "0.0.1",
     "markdown-it-table-of-contents": "^0.4.4",
     "moment": "^2.29.1",
