--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "description": "My Blog Frontend Project",
   "author": "vagivagi",
+  "engines": {
+    "node": "15.4.0"
+  },
   "scripts": {
     "build": "nuxt-ts build",
     "build:prod": "cross-env NODE_ENV=\"production\" nuxt-ts build",
