--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nuxt/typescript": "^2.8.1",
     "@nuxt/typescript-runtime": "^2.0.0",
     "@nuxtjs/axios": "^5.12.4",
+    "@nuxtjs/google-adsense": "^1.4.0",
     "@nuxtjs/google-analytics": "^2.4.0",
     "@nuxtjs/markdownit": "^1.2.10",
     "@nuxtjs/vuetify": "^1.11.2",
