--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "dev": "nuxt-ts",
     "dev:local": "cross-env NODE_ENV=\"local\" nuxt-ts",
     "generate": "nuxt-ts generate",
-    "heroku-postbuild": "npm run generate",
     "precommit": "npm run lint",
     "prod": "cross-env NODE_ENV=\"production\" nuxt-ts",
     "start": "nuxt-ts start",
@@ -26,6 +25,7 @@
     "@nuxt/types": "^2.14.12",
     "@nuxt/typescript": "^2.8.1",
     "@nuxt/typescript-runtime": "^2.0.0",
+    "@nuxt/ufo": "^0.5.4",
     "@nuxtjs/axios": "^5.12.4",
     "@nuxtjs/google-adsense": "^1.4.0",
     "@nuxtjs/google-analytics": "^2.4.0",
@@ -34,8 +34,9 @@
     "@typescript-eslint/eslint-plugin": "^2.34.0",
     "@typescript-eslint/parser": "^2.34.0",
     "cross-env": "^7.0.3",
-    "fibers": "^4.0.3",
+    "css-loader": "^5.2.7",
     "fs": "0.0.1-security",
+    "markdown-it": "^12.3.2",
     "markdown-it-anchor": "^5.3.0",
     "markdown-it-highlightjs": "^3.4.0",
     "markdown-it-imsize": "^2.0.1",
@@ -43,7 +44,7 @@
     "markdown-it-meta": "0.0.1",
     "markdown-it-table-of-contents": "^0.4.4",
     "moment": "^2.29.2",
-    "nuxt": "^2.14.12",
+    "nuxt": "^2.18.1",
     "prismjs": "^1.27.0",
     "redirect-ssl": "^1.4.1",
     "sass": "^1.30.0",
